Improve the OOD eval notebook

--- a/sentence_splitter/colabs/sentence_splitter_out_of_domain_eval.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_out_of_domain_eval.ipynb
@@ -81,10 +81,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e253f02c",
+   "id": "63e62fcc",
    "metadata": {},
    "source": [
-    "We need first of all produce labels from a pieces of gold-annotated splitted "
+    "List the fine-tuned (besed on embedding models) models we want to test: "
    ]
   },
   {
@@ -94,7 +94,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trained_model_name = \"bert-base-cased-sentence-splitter\""
+    "models = [\n",
+    "    \"bert-base-cased-sentence-splitter\",\n",
+    "    \"ModernBERT-base-ita-sentence-splitter\",\n",
+    "    \"bert-base-italian-xxl-cased-sentence-splitter\",\n",
+    "    \"xlm-roberta-base-sentence-splitter\",\n",
+    "    \"xlm-roberta-large-sentence-splitter\",\n",
+    "    \"electra-base-italian-xxl-cased-discriminator-sentence-splitter\",\n",
+    "]"
    ]
   },
   {
@@ -102,61 +109,134 @@
    "id": "67c1c14c",
    "metadata": {},
    "source": [
-    "Choose `trained_model_name` between:\n",
+    "We want evaluate the f1 score of the splitting prediction comparted.\n",
     "\n",
-    "1. bert-base-cased-sentence-splitter\n",
-    "2. ModernBERT-base-ita-sentence-splitter\n",
-    "3. bert-base-italian-xxl-cased-sentence-splitter\n",
-    "4. xlm-roberta-base-sentence-splitter\n",
-    "5. xlm-roberta-large-sentence-splitter\n",
-    "6. electra-base-italian-xxl-cased-discriminator-sentence-splitter"
+    "First of all, from a prediction and from a golden-annotated novel fragment we want to produce label.\n",
+    "The labels produced for the evaluation here are different from the ones are used to fine-tune the models:\n",
+    "for simplicity of the implementation we have a label for each character instead of a lable for each token."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a60f25fe",
+   "id": "d2142efc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_checkpoint = \"fax4ever/\" + trained_model_name\n",
-    "inference_pipeline = pipeline(\"token-classification\", model=model_checkpoint, \n",
-    "                              aggregation_strategy=\"simple\")"
+    "def sequence_eval(inference_pipeline, sequence_lines):\n",
+    "    sequence = \" \".join(sequence_lines)\n",
+    "    prediction = inference_pipeline(sequence)\n",
+    "    prediction_labels = labels_from_prediction(prediction)\n",
+    "    golden_labels = labels_from_novel(sequence_lines)\n",
+    "\n",
+    "    if (len(prediction_labels) < len(golden_labels)):\n",
+    "        print(\"Truncating golden labels. You should use a smaller value for NUM_LINES_FOR_EVAL!\")\n",
+    "        golden_labels = golden_labels[:len(prediction_labels)]\n",
+    "\n",
+    "    return prediction_labels, golden_labels\n",
+    "\n",
+    "def labels_from_prediction(prediction):\n",
+    "    ones = {}\n",
+    "    for label in prediction:\n",
+    "        if label[\"entity_group\"] == \"LABEL_1\":\n",
+    "            for i in range(label[\"start\"], label[\"end\"]):\n",
+    "                ones[i] = 1\n",
+    "\n",
+    "    first = prediction[0]\n",
+    "    last = prediction[-1]\n",
+    "    labels = []\n",
+    "    for i in range(first[\"start\"], last[\"end\"]):\n",
+    "        if i in ones:\n",
+    "            labels.append(1)\n",
+    "        else:\n",
+    "            labels.append(0)\n",
+    "    return labels\n",
+    "\n",
+    "\n",
+    "def labels_from_novel(novel_lines):\n",
+    "    labels = []\n",
+    "    for i, novel_line in enumerate(novel_lines):\n",
+    "        for _ in range(len(novel_line) - 1):\n",
+    "            labels.append(0)\n",
+    "        labels.append(1)\n",
+    "        if i < len(novel_lines) - 1:\n",
+    "            labels.append(0)\n",
+    "    return labels"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2fbc0983",
+   "id": "7694a560",
    "metadata": {},
    "source": [
-    "Load the out of domain (other authors) dataset:"
+    "The golden-annotated novel is grouped in chunk of equal size of lines.\n",
+    "\n",
+    "From each chunk we evaluate the f1, comparing the labels generated from the golden annotated chunk,\n",
+    "with the prediction made by the model:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0798ef9c",
+   "id": "29c37ee5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_text(url):\n",
-    "    return urllib3.urlopen(url).read()\n",
+    "def eval_model(model_name: str, novel_path: Path, num_lines_for_eval: int):\n",
+    "    model_checkpoint = \"fax4ever/\" + model_name\n",
+    "    inference_pipeline = pipeline(\"token-classification\", model=model_checkpoint, aggregation_strategy=\"simple\")\n",
+    "    novel_lines = novel_path.read_text(encoding=\"utf-8\").splitlines()\n",
+    "    return eval(inference_pipeline, novel_lines, num_lines_for_eval)\n",
     "\n",
-    "def load_lines_of_text(url):\n",
-    "    result = []\n",
-    "    for line in urllib3.urlopen(url):\n",
-    "        result.append(line.decode('utf-8').strip())\n",
-    "BASE_URL = \"https://raw.githubusercontent.com/RacheleSprugnoli/Sentence_Splitting_Manzoni/refs/heads/main/test-novels/\"\n",
+    "def eval(inference_pipeline, novel_lines, num_lines_for_eval):\n",
+    "    metric = evaluate.load(\"f1\", average=\"binary\")\n",
     "\n",
-    "cuore_test = load_text(BASE_URL + \"Cuore-test.txt\")\n",
-    "cuore_lines = load_lines_of_text(BASE_URL + \"Cuore-GOLD.txt\")"
+    "    grouped_lines = np.array_split(novel_lines, groups(novel_lines, num_lines_for_eval))\n",
+    "    for sequence_lines in grouped_lines:\n",
+    "        prediction_labels, golden_labels = sequence_eval(inference_pipeline, sequence_lines)\n",
+    "        metric.add_batch(predictions=prediction_labels, references=golden_labels)\n",
+    "\n",
+    "    return metric.compute()  \n",
+    "\n",
+    "def groups(novel_lines, num_lines_for_eval):\n",
+    "    groups = len(novel_lines) / num_lines_for_eval\n",
+    "    if len(novel_lines) % num_lines_for_eval is not 0:\n",
+    "        groups += 1\n",
+    "    return groups"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "0950f2c6",
    "metadata": {},
-   "source": []
+   "source": [
+    "We test in-domain novel (Quarantana) and 3 novels from different authors of the same period:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41e8b113",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for model_name in models:\n",
+    "    novel = \"Cuore-GOLD.txt\"\n",
+    "    value = eval_model(model_name, Path(__file__).parent / 'out_of_domain_data' / novel, 6)\n",
+    "    print(model_name, novel, value[\"f1\"])\n",
+    "\n",
+    "    novel = \"Malavoglia-GOLD.txt\"\n",
+    "    value = eval_model(model_name, Path(__file__).parent / 'out_of_domain_data' / novel, 3)\n",
+    "    print(model_name, novel, value[\"f1\"])\n",
+    "\n",
+    "    novel = \"Pinocchio-GOLD.txt\"\n",
+    "    value = eval_model(model_name, Path(__file__).parent / 'out_of_domain_data' / novel, 7)\n",
+    "    print(model_name, novel, value[\"f1\"])\n",
+    "\n",
+    "    novel = \"Quarantana-GOLD.txt\"\n",
+    "    value = eval_model(model_name, Path(__file__).parent / 'out_of_domain_data' / novel, 5)\n",
+    "    print(model_name, novel, value[\"f1\"])"
+   ]
   }
  ],
  "metadata": {
