--- a/sentence_splitter/latex/nlp-homework-2.tex
+++ b/sentence_splitter/latex/nlp-homework-2.tex
@@ -130,9 +130,9 @@ For the LLM-based solution, we implemented the approach using Qwen3-4B Instruct.
 We considered several instruction-tuned models during development:
 
  \begin{itemize}
-	\item LLaMA-3-8B Instruct
-	\item Mixtral 8x7B Instruct
-	\item Qwen3-4B Instruct
+ 	\item Qwen3-4B
+	\item Meta-Llama-3.1-8B-Instruct
+	\item mistral-7b-instruct-v0.3-bnb-4bit
 \end{itemize}
 
 The actual implementation uses Qwen3-4B Instruct (via unsloth/Qwen3-4B) with 4-bit quantization and LoRA fine-tuning.
