--- a/sentence_splitter/colabs/sentence_splitter_out_of_domain_eval.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_out_of_domain_eval.ipynb
@@ -23,7 +23,7 @@
    "outputs": [],
    "source": [
     "!pip install --upgrade pip\n",
-    "!pip install transformers"
+    "!pip install transformers evaluate"
    ]
   },
   {
@@ -200,7 +200,7 @@
     "\n",
     "def groups(novel_lines, num_lines_for_eval):\n",
     "    groups = len(novel_lines) / num_lines_for_eval\n",
-    "    if len(novel_lines) % num_lines_for_eval is not 0:\n",
+    "    if len(novel_lines) % num_lines_for_eval != 0:\n",
     "        groups += 1\n",
     "    return groups"
    ]
@@ -222,19 +222,19 @@
    "source": [
     "for model_name in models:\n",
     "    novel = \"Cuore-GOLD.txt\"\n",
-    "    value = eval_model(model_name, Path(__file__).parent / 'out_of_domain_data' / novel, 6)\n",
+    "    value = eval_model(model_name, Path('out_of_domain_data') / novel, 6)\n",
     "    print(model_name, novel, value[\"f1\"])\n",
     "\n",
     "    novel = \"Malavoglia-GOLD.txt\"\n",
-    "    value = eval_model(model_name, Path(__file__).parent / 'out_of_domain_data' / novel, 3)\n",
+    "    value = eval_model(model_name, Path('out_of_domain_data') / novel, 3)\n",
     "    print(model_name, novel, value[\"f1\"])\n",
     "\n",
     "    novel = \"Pinocchio-GOLD.txt\"\n",
-    "    value = eval_model(model_name, Path(__file__).parent / 'out_of_domain_data' / novel, 7)\n",
+    "    value = eval_model(model_name, Path('out_of_domain_data') / novel, 7)\n",
     "    print(model_name, novel, value[\"f1\"])\n",
     "\n",
     "    novel = \"Quarantana-GOLD.txt\"\n",
-    "    value = eval_model(model_name, Path(__file__).parent / 'out_of_domain_data' / novel, 5)\n",
+    "    value = eval_model(model_name, Path('out_of_domain_data') / novel, 5)\n",
     "    print(model_name, novel, value[\"f1\"])"
    ]
   }
