--- a/sentence_splitter/colabs/sentence_splitter_embeddings.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_embeddings.ipynb
@@ -493,20 +493,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = \"\"\"\n",
-    "    Non era un legno di lusso, ma un semplice pezzo\n",
-    "    da catasta, di quelli che d’inverno si mettono nelle\n",
-    "    stufe e nei caminetti per accendere il fuoco e per riscaldare le stanze.\n",
-    "    Non so come andasse, ma il fatto gli è che un bel\n",
-    "    giorno questo pezzo di legno capitò nella bottega\n",
-    "    di un vecchio falegname, il quale aveva nome mastr’Antonio, se non che tutti lo chiamavano maestro\n",
-    "    Ciliegia, per via della punta del suo naso, che era\n",
-    "    sempre lustra e paonazza, come una ciliegia matura.\n",
-    "    Appena maestro Ciliegia ebbe visto quel pezzo di\n",
-    "    legno, si rallegrò tutto; e dandosi una fregatina di\n",
-    "    mani per la contentezza, borbottò a mezza voce:\n",
-    "    \"Questo legno è capitato a tempo; voglio servirmene per fare una gamba di tavolino.\" \n",
-    "\"\"\".rstrip()\n",
+    "text = \"\"\"Non era un legno di lusso, ma un semplice pezzo\n",
+    "da catasta, di quelli che d’inverno si mettono nelle\n",
+    "stufe e nei caminetti per accendere il fuoco e per riscaldare le stanze.\n",
+    "Non so come andasse, ma il fatto gli è che un bel\n",
+    "giorno questo pezzo di legno capitò nella bottega\n",
+    "di un vecchio falegname, il quale aveva nome mastr’Antonio, se non che tutti lo chiamavano maestro\n",
+    "Ciliegia, per via della punta del suo naso, che era\n",
+    "sempre lustra e paonazza, come una ciliegia matura.\n",
+    "Appena maestro Ciliegia ebbe visto quel pezzo di\n",
+    "legno, si rallegrò tutto; e dandosi una fregatina di\n",
+    "mani per la contentezza, borbottò a mezza voce:\n",
+    "\"Questo legno è capitato a tempo; voglio servirmene per fare una gamba di tavolino.\" \n",
+    "\"\"\"\n",
+    "text = text.splitlines()\n",
+    "text = \" \".join(text)\n",
     "\n",
     "inference_pipeline(text)"
    ]
