Improve report and eval of generative

--- a/sentence_splitter/colabs/sentence_splitter_out_of_domain_eval.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_out_of_domain_eval.ipynb
@@ -113,7 +113,7 @@
     "\n",
     "First of all, from a prediction and from a golden-annotated novel fragment we want to produce label.\n",
     "The labels produced for the evaluation here are different from the ones are used to fine-tune the models:\n",
-    "for simplicity of the implementation we have a label for each character instead of a lable for each token."
+    "for simplicity of the implementation we have a label for each character instead of a label for each token."
    ]
   },
   {
