Improve report and eval of generative

--- a/sentence_splitter/colabs/sentence_splitter_generative_eval.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_generative_eval.ipynb
@@ -24,7 +24,7 @@
    "id": "cda69806",
    "metadata": {},
    "source": [
-    "Import all libraries that we will use."
+    "Import the libraries"
    ]
   },
   {
@@ -39,6 +39,14 @@
     "import torch\n",
     "from unsloth import FastLanguageModel\n",
     "from transformers import TextStreamer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eeb35c8e",
+   "metadata": {},
+   "source": [
+    "Before proceeding, make the run as much deterministic as possible:"
    ]
   },
   {
@@ -63,6 +71,15 @@
     "        torch.cuda.manual_seed(seed)\n",
     "        torch.cuda.manual_seed_all(seed)\n",
     "set_seed(RANDOM_STATE) # Set the seed for reproducibility -- use_deterministic_algorithms can make training slower :("
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0da81171",
+   "metadata": {},
+   "source": [
+    "Reuse the `Prompt` class from the training notebook.\n",
+    "Here only the `question` method will be invoked."
    ]
   },
   {
@@ -97,19 +114,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b6607978",
+   "cell_type": "markdown",
+   "id": "fd5c468e",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "model, tokenizer = FastLanguageModel.from_pretrained('fax4ever/Minerva-7B-instruct-v1.0-sentence-splitter')"
+    "Let's test (this time manually) how the trained LLM-based models performed on a given text\n",
+    "using an out of domain novel (Cuore)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82e1e047",
+   "id": "72ce7b9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,22 +144,79 @@
     "\"\"\"\n",
     "input_text = input_text.splitlines()\n",
     "input_text = \" \".join(input_text)\n",
+    "input_text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e84ec7d",
+   "metadata": {},
+   "source": [
+    "Each model is loaded from Hugging Face and used to generate the answer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04e1cbfb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_model(name):\n",
+    "    model, tokenizer = FastLanguageModel.from_pretrained('fax4ever/' + name)\n",
+    "    question = tokenizer.apply_chat_template(\n",
+    "        [Prompt(input_text).question()], \n",
+    "        tokenize = False,\n",
+    "        add_generation_prompt = True, # Must add for generation\n",
+    "        enable_thinking = False, # Disable thinking\n",
+    "    )\n",
     "\n",
-    "print(input_text)\n",
-    "\n",
-    "question = tokenizer.apply_chat_template(\n",
-    "    [Prompt(input_text).question()], \n",
-    "    tokenize = False,\n",
-    "    add_generation_prompt = True, # Must add for generation\n",
-    "    enable_thinking = False, # Disable thinking\n",
-    ")\n",
-    "\n",
-    "_ = model.generate(\n",
-    "    **tokenizer(question, return_tensors = \"pt\").to(\"cuda\"),\n",
-    "    max_new_tokens = 256, # Increase for longer outputs!\n",
-    "    temperature = 0.7, top_p = 0.8, top_k = 20, # For non thinking\n",
-    "    streamer = TextStreamer(tokenizer, skip_prompt = True),\n",
-    ")"
+    "    return model.generate(\n",
+    "        **tokenizer(question, return_tensors = \"pt\").to(\"cuda\"),\n",
+    "        max_new_tokens = 512,\n",
+    "        temperature = 0.7, top_p = 0.8, top_k = 20, # For non thinking\n",
+    "        streamer = TextStreamer(tokenizer, skip_prompt = True),\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82e1e047",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_model(\"Qwen3-4B-sentence-splitter\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17bc3184",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_model(\"Meta-Llama-3.1-8B-Instruct-sentence-splitter\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74a1f19e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_model(\"mistral-7b-instruct-v0.3-bnb-4bit-sentence-splitter\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a90024bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_model(\"Minerva-7B-instruct-v1.0-sentence-splitter\")"
    ]
   }
  ],
