Improve report and eval of generative

--- a/sentence_splitter/colabs/sentence_splitter_generative_eval.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_generative_eval.ipynb
@@ -118,7 +118,7 @@
    "id": "fd5c468e",
    "metadata": {},
    "source": [
-    "Let's test (this time manually) how the trained LLM-based models performed on a given text\n",
+    "Let's test (this time manually) how the trained LLM-based models performs on a given text\n",
     "using an out of domain novel (Cuore)."
    ]
   },
@@ -163,7 +163,13 @@
    "outputs": [],
    "source": [
     "def test_model(name):\n",
-    "    model, tokenizer = FastLanguageModel.from_pretrained('fax4ever/' + name)\n",
+    "    model, tokenizer = FastLanguageModel.from_pretrained(\n",
+    "        'fax4ever/' + name, \n",
+    "        load_in_4bit=True, \n",
+    "        dtype=None, \n",
+    "        max_seq_length=512\n",
+    "    )\n",
+    "    model = FastLanguageModel.for_inference(model)\n",
     "    question = tokenizer.apply_chat_template(\n",
     "        [Prompt(input_text).question()], \n",
     "        tokenize = False,\n",
