--- a/sentence_splitter/latex/nlp-homework-2.tex
+++ b/sentence_splitter/latex/nlp-homework-2.tex
@@ -155,7 +155,7 @@ We tested the in-domain novel (Quarantana) and 3 novels (Pinocchio, I Malavoglia
 \subsection{LLM-based}
 
 Results for LLM-based (generative)  models will be evaluated manually, simply taking an out of domain 
-text fragment from Cuore novel and pass in input to the target test models.
+text fragment from Cuore novel and pass it as input to the target test models.
 
 \section{Results}
 
