Fix LLM conversational dataset

--- a/sentence_splitter/colabs/sentence_splitter_generative.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_generative.ipynb
@@ -125,12 +125,23 @@
    "source": [
     "SIZE = 192 # Number of words to put on each input of the encoder model\n",
     "\n",
+    "def words_to_sentences(words):\n",
+    "    input_text = \" \".join(words)\n",
+    "    input_text = input_text.replace(\" ,\", \",\")\n",
+    "    input_text = input_text.replace(\" .\", \".\")\n",
+    "    input_text = input_text.replace(\" ?\", \"?\")\n",
+    "    input_text = input_text.replace(\" !\", \"!\")\n",
+    "    input_text = input_text.replace(\" :\", \":\")\n",
+    "    input_text = input_text.replace(\" ;\", \";\")\n",
+    "    input_text = input_text.replace(\"' \", \"'\")\n",
+    "    return input_text\n",
+    "\n",
     "def create_conversations(examples):\n",
     "    input_texts = []\n",
     "    output_texts = []\n",
     "\n",
     "    for tokens, labels in zip(examples['tokens'], examples['labels']):\n",
-    "        input_text = \" \".join(tokens)\n",
+    "        input_text = words_to_sentences(tokens)\n",
     "        input_texts.append(input_text)\n",
     "\n",
     "        sentences = []\n",
@@ -138,12 +149,11 @@
     "        for token, label in zip(tokens, labels):\n",
     "            current_sentence.append(token)\n",
     "            if label == 1:  # End of sentence\n",
-    "                sentences.append(\" \".join(current_sentence).strip())\n",
+    "                sentences.append(words_to_sentences(current_sentence))\n",
     "                current_sentence = []\n",
-    "        \n",
-    "        # Add remaining tokens if any\n",
+    "\n",
     "        if current_sentence:\n",
-    "            sentences.append(\" \".join(current_sentence).strip())\n",
+    "            sentences.append(words_to_sentences(current_sentence))\n",
     "\n",
     "        output_text = \"\\n\".join([f\"{i+1}. {sentence}\" for i, sentence in enumerate(sentences)])\n",
     "        output_texts.append(output_text)\n",
